2014-03-27  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/60682
	* omp-low.c (lower_omp_1): For gimple_clobber_p stmts,
	if they need regimplification, just drop them instead of
	calling gimple_regimplify_operands on them.

2014-03-27  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	PR target/60580
	* config/aarch64/aarch64.c (faked_omit_frame_pointer): Remove.
	(aarch64_frame_pointer_required): Adjust logic.
	(aarch64_can_eliminate): Adjust logic.
	(aarch64_override_options_after_change): Adjust logic.

2014-03-27  Dehao Chen  <dehao@google.com>

	* ipa-inline.c (early_inliner): Update node's inline info.

2014-03-26  Dehao Chen  <dehao@google.com>

	* dojump.c (do_compare_rtx_and_jump): Sets correct probability for
	compiler inserted conditional jumps for NAN float check.

2014-03-26  Jakub Jelinek  <jakub@redhat.com>

	* ubsan.h (ubsan_create_data): Change second argument's type
	to const location_t *.
	* ubsan.c (ubsan_source_location): If xloc.file is NULL, set it to
	_("<unknown>").
	(ubsan_create_data): Change second argument to const location_t *PLOC.
	Create Loc field whenever PLOC is non-NULL.
	(ubsan_instrument_unreachable, ubsan_expand_null_ifn,
	ubsan_build_overflow_builtin, instrument_bool_enum_load): Adjust
	callers.

	PR other/59545
	* real.c (real_to_integer2): Change type of low to UHWI.

2014-03-26  Tobias Burnus  <burnus@net-b.de>

	* gcc.c (LINK_COMMAND_SPEC): Use libcilkrts.spec for -fcilkplus.
	(CILK_SELF_SPECS): New define.
	(driver_self_specs): Use it.

2014-03-26  Richard Biener  <rguenther@suse.de>

	* tree-pretty-print.c (percent_K_format): Implement special
	case for LTO and its stripped down BLOCK tree.

2014-03-26  Jakub Jelinek  <jakub@redhat.com>

	PR sanitizer/60636
	* ubsan.c (instrument_si_overflow): Instrument ABS_EXPR.

	* tree-vrp.c (simplify_internal_call_using_ranges): If only
	one range is range_int_cst_p, but not both, at least optimize
	addition/subtraction of 0 and multiplication by 0 or 1.